# synapso-cli

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: package-upload.yml
resources/: default_config.yaml
src/synapso_cli/: config.py  main.py  rest_client.py
src/synapso_cli/commands/: __init__.py  init.py  job.py  query.py  server.py
src/synapso_cli/commands/cortex/: __init__.py  base.py  commands.py  create.py  index.py  init.py
