[project]
name = "synapso_cli"
version = "0.3.0"
description = "Internal"
authors = [{ name = "Ganesh Palanikumar" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer==0.16.0", "synapso-core>=0.2.0", "pyyaml==6.0.2"]

[project.scripts]
synapso = "synapso_cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["synapso_cli"]
