[project]
name = "synapso_cli"
version = "0.3.0"
description = "Internal"
authors = [{ name = "Ganesh Palanikumar" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer==0.16.0", "pyyaml==6.0.2", "requests>=2.31.0"]

[project.scripts]
synapso = "synapso_cli.main:synapso_cli"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["synapso_cli"]
